Closed
Bug 821396
Opened 13 years ago
Closed 12 years ago
Fix build warnings in content/media/dash
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: catalinn.iordache, Assigned: catalinn.iordache)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 2 obsolete files)
|
4.31 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:17.0) Gecko/20100101 Firefox/17.0
Build ID: 20121129151900
Steps to reproduce:
Fix warnings in content/media/dash/DASHDecoder.cpp and content/media/dash/DASHRepDecoder.cpp
| Assignee | ||
Comment 1•13 years ago
|
||
I'm a beginner developer. This is actually my second patch for Mozilla codebase, but I have to say that the first one wasn't relevant( bug 821269).
I hope this one is more relevant.
| Assignee | ||
Updated•13 years ago
|
Hardware: x86 → All
| Assignee | ||
Updated•13 years ago
|
Attachment #691894 -
Flags: review?
Updated•13 years ago
|
Component: Disability Access APIs → DOM
| Assignee | ||
Updated•13 years ago
|
Attachment #691894 -
Flags: review?
| Assignee | ||
Updated•13 years ago
|
Attachment #691894 -
Flags: review?
Updated•13 years ago
|
Attachment #691894 -
Flags: review? → review?(bugs)
Updated•13 years ago
|
Attachment #691894 -
Flags: review?(bugs) → review?(cpearce)
Comment 2•13 years ago
|
||
Comment on attachment 691894 [details] [diff] [review]
p2v1.patch
Review of attachment 691894 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/media/dash/DASHRepDecoder.cpp
@@ +270,5 @@
> // i.e. inactive rep decoders should only load metadata.
> bool canDownloadData = mMainDecoder->IsDecoderAllowedToDownloadData(this);
> if (canDownloadData) {
> + for (uint32_t i = 0; i < mByteRanges.Length(); i++) {
> + NS_ENSURE_FALSE(mByteRanges[i].IsNull(), NS_ERROR_NOT_INITIALIZED);
You added some trailing whitespace here; please remove it.
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #691894 -
Attachment is obsolete: true
Attachment #691894 -
Flags: review?(cpearce)
| Assignee | ||
Updated•13 years ago
|
Attachment #692590 -
Flags: review?
Updated•13 years ago
|
Blocks: buildwarning
Updated•13 years ago
|
Attachment #692590 -
Flags: review? → review?(cpearce)
Comment 4•12 years ago
|
||
Comment on attachment 692590 [details] [diff] [review]
whitespaces removed
Review of attachment 692590 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/media/dash/DASHDecoder.cpp
@@ +697,5 @@
>
> // Do Stream Switching here before loading next bytes.
> // Audio stream switching not supported.
> if (aRepDecoder == VideoRepDecoder() &&
> + (uint32_t)mVideoSubsegmentIdx < VideoRepDecoder()->GetNumDataByteRanges()) {
Make this:
uint32_t(mVideoSubsegmentIdx)
@@ +938,5 @@
> NS_ENSURE_TRUE(toDecoderIdx < mVideoRepDecoders.Length(),
> NS_ERROR_ILLEGAL_VALUE);
>
> // Notify reader and sub decoders and do the switch.
> + if (toDecoderIdx != (uint32_t)mVideoRepDecoderIdx) {
Make this:
uint32_t(mVideoRepDecoderIdx)
Attachment #692590 -
Flags: review?(cpearce) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
Attachment #692958 -
Flags: checkin?
| Assignee | ||
Updated•12 years ago
|
Attachment #692958 -
Flags: checkin?
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
Updated•12 years ago
|
Attachment #692590 -
Attachment is obsolete: true
Updated•12 years ago
|
Attachment #692958 -
Attachment is patch: true
Comment 6•12 years ago
|
||
Assignee: nobody → catalinn.iordache
Keywords: checkin-needed
Comment 7•12 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•