Bug 821396 - Fix warnings in DASHDecoder.cpp and DASHRepDecoder.cpp. r=cpearce